0026244: Destructive results of simplification with DRAW command 'unifysamedom' after intersection of two complex models

corrections unifysamedom :: problem with triangulation (2)

Test case for issue CR26244